# Sort_visualiser

./: CMakeLists.txt  README.md
src/: main.cpp
src/App/: App.cpp  App.h  Status.h
src/App/Algorithms/: Algorithm.cpp  Algorithm.h  BubbleSort.cpp  BubbleSort.h  CocktailSort.cpp  CocktailSort.h  CombSort.cpp  CombSort.h  GnomeSort.cpp  GnomeSort.h  HeapSort.cpp  HeapSort.h  InsertionSort.cpp  InsertionSort.h  MergeSort.cpp  MergeSort.h  QuickSort.cpp  QuickSort.h  SelectionSort.cpp  SelectionSort.h  ShellSort.cpp  ShellSort.h
src/App/Bar/: Bar.cpp  Bar.h
src/App/MainPanel/: MainPanel.cpp  MainPanel.h
src/App/SidePanel/: SidePanel.cpp  SidePanel.h
